# minion2

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BLUEPRINT.md  OPERATIONS.md  ORCHESTRATION.md  PLATFORM.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  image.yml
deploy/: crontab.example  nas-update.sh
deploy/apps_script/: Config.gs  Kindle.gs  README.md
deploy/n8n/: README.md  censor-blur.workflow.json
deploy/reactflow/: index.html
deploy/windows/: README.md  env.ps1  register-tasks.ps1  run-bot.ps1  run.cmd  run.ps1  unregister-tasks.ps1
docker/: Dockerfile  crontab
docs/: BOTS.md
minion_core/: __init__.py  events.py  graph.py  kernel.py  progress.py  service.py  settings.py
minion_core/adapters/: __init__.py  admin.py  backend.py  donations.py  fetch.py  files.py  frames.py  library.py  llm.py  ollama.py  schedule.py  scripts.py  service_call.py  tg.py  video.py  vision.py  wishlist.py
minion_core/prompts/: __init__.py  classify.md  name_image.md  props.md  restore_background.md  script_hint.md
minions/: __init__.py  catalog.py  graph.py  service.py  telegram.py
minions/_template/: __init__.py  main.py
minions/aggregator/: README.md  __init__.py  aggregator_constants.json  dump_emoji_ids.py  login.py  main.py
minions/bots/: __init__.py
minions/bots/catch/: __init__.py  main.py
minions/bots/donations/: main.py  messages.json
minions/bots/inbox/: main.py
minions/bots/model_switch/: __init__.py  main.py
minions/bots/moderator/: __init__.py  main.py
minions/bots/print/: __init__.py
minions/bots/sort/: main.py  passes.py
minions/bots/week_clean/: __init__.py  main.py
minions/bots/wishlist/: main.py  messages.json
minions/catch/: main.py
minions/censor/: __init__.py  main.py
minions/censor_black/: main.py  service.py
minions/censor_blur/: __init__.py  main.py  service.py
minions/donations/: __init__.py  main.py  messages.json
minions/fan_save/: __init__.py  main.py
minions/fetch/: main.py  service.py
minions/frames/: __init__.py  graph.json  main.py  service.py  step.py
minions/inbox/: __init__.py  graph.json  main.py
minions/model_switch/: main.py
minions/print/: main.py
minions/props/: __init__.py  main.py
minions/relay/: __init__.py  main.py
minions/restore/: __init__.py  main.py  service.py  step.py
minions/sort/: __init__.py  main.py  passes.py
minions/svc/: __init__.py
minions/svc/censor_black/: __init__.py  service.py  step.py
minions/svc/censor_blur/: service.py  step.py
minions/svc/fetch/: __init__.py  service.py
minions/svc/frames/: service.py
minions/svc/restore/: service.py
minions/telegram/: __init__.py  main.py  progress_style.py  relay.py
minions/week_clean/: main.py
minions/wishlist/: __init__.py  main.py  messages.json
services/: Dockerfile  README.md  __init__.py  api.py  billing.py  bus.py  core.py  docker-compose.yml  http.py  mcp_server.py  models.py  orchestrate.py  pyproject.toml  repo.py  serve.py  store.py
services/tests/: test_api.py  test_billing.py  test_jobs.py  test_orchestrate_http.py  test_run_file.py  test_skins.py  test_store_s3.py  test_web.py
services/web/: app.js  index.html  style.css
telethon_premium_emoji/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  aggregator.py  aggregator_constants.json  docker-compose.yml  dump_emoji_ids.py  login.py  main.py  post_bot.py  premium_emoji.py
tests/: conftest.py  test_admin.py  test_architecture.py  test_ascii.py  test_backend.py  test_bots.py  test_bus.py  test_censor_family.py  test_donations.py  test_events.py  test_fan_save.py  test_fetch.py  test_files.py  test_frames.py  test_graph.py  test_kernel.py  test_llm.py  test_model_switch.py  test_moderator.py  test_ollama.py  test_orchestrate.py  test_port.py  test_progress_style.py  test_props.py  test_relay.py  test_schedule.py  test_scripts.py  test_service.py  test_service_call.py  test_service_core.py  test_settings.py  test_sort.py  test_telegram.py  test_tg.py  test_vision.py  test_wishlist.py
