# Services tier deps. Separate from the kernel's root pyproject: this tier
# carries a web stack and lighter conventions. It imports the kernel's Step
# catalog but never the other way round. Bytes in, bytes out -- no object
# store SDK; a fresh local temp store backs each request.
[project]
name = 'minion-services'
version = '0.1.0'
description = 'HTTP/OpenAPI + MCP skins over one Step (bytes in, bytes out).'
requires-python = '>=3.11'
dependencies = [
    'fastapi>=0.115',
    'uvicorn>=0.30',
    'pydantic>=2.7',
    'mcp>=1.2',
]

[project.optional-dependencies]
dev = ['pytest>=8', 'httpx>=0.27']
